test/libsolidity/syntaxTests/constructor/returns_in_constructor.sol
contract test {
	constructor() returns (uint a) { }
}
// ----
// TypeError: (46-54): Non-empty "returns" directive for constructor.
